<resources>
    <string name="app_name">黑龙江气象</string>
    <string name="province_name">黑龙江</string>
    <string name="copyright">黑龙江省气象局\n黑龙江省气象服务中心</string>
    <string name="logout">退出登录</string>
    <string name="login_prompt">账号登陆</string>
    <string name="username">账号：</string>
    <string name="password">密码：</string>
    <string name="login_deng">登</string>
    <string name="login_lu">录</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="humidity">相对湿度</string>
    <string name="rainfall">降水量</string>
    <string name="pressure">气压</string>
    <string name="wind_force_dir">风力风向</string>
    <string name="hourly_forecast">逐小时预报</string>
    <string name="weekly_forecast">15天预报</string>
    <string name="update">更新</string>
    <string name="today">今天</string>
    <string name="is_loading">正在加载...</string>
    <string name="input_city_name">请输入城市名</string>
    <string name="hot_province">省内热门</string>
    <string name="hot_national">全国热门</string>
    <string name="setting">设置</string>
    <string name="back">返回</string>
    <string name="sure_delete_cache">确定要清除缓存？</string>
    <string name="delete_cache">清除缓存</string>
    <string name="sure_delete_data">确定要清除数据？</string>
    <string name="delete_data">清除数据</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="confirm_exit">再按一次退出</string>
    <string name="day">天</string>
    <string name="no_statics">未统计</string>
    <string name="from">自</string>
    <string name="to">至</string>
    <string name="highest_temp">日最高气温</string>
    <string name="lowest_temp">日最低气温</string>
    <string name="max_speed">日最大风速</string>
    <string name="max_fall">日最大降水量</string>
    <string name="lx_no_fall">连续无降水日数</string>
    <string name="lx_no_mai">连续霾日数</string>
    <string name="no_guizhou_warning">贵州省辖区暂无预警信息发布</string>
    <string name="publish">发布</string>
    <string name="warning">预警</string>
    <string name="warning_detail">预警详情</string>
    <string name="order_channel">频道定制</string>
    <string name="order_delete">排序删除</string>
    <string name="complete">完成</string>
    <string name="switch_channel">切换频道</string>
    <string name="long_press_order">长按拖拽排序</string>
    <string name="click_add_channel">点击添加频道</string>
    <string name="no_radar_data">该雷达站暂无数据</string>
    <string name="write_feedback">欢迎写下您宝贵的建议...</string>
    <string name="submit">提交</string>
    <string name="submit_success">提交成功，感谢您的宝贵建议！</string>
    <string name="table">列表</string>
    <string name="map">地图</string>
    <string name="refresh">刷新</string>
    <string name="data_isexception">数据异常，图表绘制失败~</string>
    <string name="rank_weather">天气排行</string>
    <string name="rank_top_ten">排行前十</string>
    <string name="color_blue">蓝色</string>
    <string name="color_yellow">黄色</string>
    <string name="color_orange">橙色</string>
    <string name="color_red">红色</string>
    <string name="sure_logout">确定要退出登录？</string>
    <string name="minute_fall">分钟级降水估测</string>
    <string name="select_time_area">选择时间区域</string>
    <string name="select_start_time">选择开始时间</string>
    <string name="select_end_time">选择结束时间</string>
    <string name="start_big_end">开始时间不能大于或等于结束时间</string>
    <string name="rank_max_temp">最高温度</string>
    <string name="rank_min_temp">最低温度</string>
    <string name="rank_1h_rain">1h降水量</string>
    <string name="rank_24h_rain">24h降水量</string>
    <string name="rank_max_humidity">最大湿度</string>
    <string name="rank_min_humidity">最小湿度</string>
    <string name="rank_wind_speed">风速</string>
    <string name="rank_visible">最低能见度</string>
    <string name="typhoon_level1">热带低压</string>
    <string name="typhoon_level2">热带风暴</string>
    <string name="typhoon_level3">强热带风暴</string>
    <string name="typhoon_level4">台风</string>
    <string name="typhoon_level5">强台风</string>
    <string name="typhoon_level6">超强台风</string>
    <string name="typhoon_login">登陆地点</string>
    <string name="typhoon_influnce">主要影响区域</string>
    <string name="line_24h">24\n小\n时\n警\n戒\n线</string>
    <string name="line_48h">48\n小\n时\n警\n戒\n线</string>
    <string name="no_typhoon">当前无台风</string>
    <string name="setting_my_information">我的信息</string>
	<string name="setting_push">要闻推送</string>
	<string name="setting_feedback">意见反馈</string>
	<string name="setting_version">检测版本</string>
	<string name="setting_clearcache">清除缓存</string>
	<string name="setting_cleardata">清除数据</string>
	<string name="setting_build">黑龙江省气象局简介</string>
	<string name="setting_version_code">版本号</string>
	<string name="setting_quit">退出</string>
    <string name="already_new">已经是最新版本</string>
    <string name="connect_timeout">链接超时</string>
    <string name="aqi_level1">优</string>
    <string name="aqi_level2">良</string>
    <string name="aqi_level3">轻度污染</string>
    <string name="aqi_level4">中度污染</string>
    <string name="aqi_level5">重度污染</string>
    <string name="aqi_level6">严重污染</string>
    <string name="aqi1_text">空气质量令人满意，基本无空气污染，各类人群可正常活动。</string>
    <string name="aqi2_text">空气质量可接受，但某些污染物可能对极少数异常敏感人群健康有较弱影响，建议极少数异常敏感人群应减少户外活动。</string>
    <string name="aqi3_text">易感人群症状有轻度加剧，健康人群出现刺激症状。建议儿童、老年人及心脏病、呼吸系统疾病患者应减少长时间、高强度的户外锻炼。</string>
    <string name="aqi4_text">进一步加剧易感人群症状，可能对健康人群心脏、呼吸系统有影响，建议疾病患者避免长时间、高强度的户外锻练，一般人群适量减少户外运动。</string>
    <string name="aqi5_text">心脏病和肺病患者症状显著加剧，运动耐受力降低，健康人群普遍出现症状-建议儿童、老年人和心脏病、肺病患者应停留在室内，停止户外运动，一般人群减少户外运动。</string>
    <string name="aqi6_text">健康人群运动耐受力降低，有明显强烈症状，提前出现某些疾病-建议儿童、老年人和病人应当留在室内，避免体力消耗，一般人群应避免户外活动。</string>
    <string name="week">周</string>
    <string name="share">分享</string>
    <string name="no_data">无数据~~~</string>
    <string name="text_size">字号大小</string>
    <string name="little_caiyun">小彩云</string>
    <string name="auto_update">更新提醒</string>
    <string name="new_version">最新版本：</string>
    <string name="update_log">更新日志：</string>
    <string name="update_right_now">立即更新</string>
    <string name="update_later">以后再说</string>
    <string name="already_new_version">已经是最新版本！</string>
    <string name="last_page">已经是最后一页</string>
    <string name="select_start_point">选择起点</string>
    <string name="select_end_point">选择终点</string>
    <string name="route_start_point">起点：</string>
    <string name="route_end_point">终点：</string>
    <string name="route_current_position">当前位置</string>
    <string name="visible">能见度：</string>
    <string name="no_result">对不起，没有搜索到相关数据！</string>
    <string name="route">路线</string>
    <string name="chart_loading">加载中...</string>
    <string name="chart_loaded">已加载</string>
    <string name="chart_download_prompt">正在使用蜂窝移动网络，继续加载可能会消耗流量，是否继续？</string>
    <string name="chart_go_on">继续</string>
    <string name="chart_year">年</string>
    <string name="chart_month">月</string>
    <string name="chart_day">日</string>
    <string name="chart_hour">时</string>
    <string name="chart_get_faild">获取台风数据失败</string>
    <string name="chart_north">北</string>
    <string name="chart_north_east">东北</string>
    <string name="chart_east">东</string>
    <string name="chart_south_east">东南</string>
    <string name="chart_south">南</string>
    <string name="chart_south_west">西南</string>
    <string name="chart_west">西</string>
    <string name="chart_north_west">西北</string>
    <string name="chart_china_forecast"> 中国预报\n</string>
    <string name="chart_time1">yyyy年MM月dd日 kk时</string>
    <string name="chart_time11111">时间：</string>
    <string name="chart_biggest_speed">最大风速：</string>
    <string name="chart_speed1">(米/秒)\n</string>
    <string name="chart_center_pressure">中心气压：</string>
    <string name="chart_baipa">(百帕)\n</string>
    <string name="chart_yidong_direct">移动方向：</string>
    <string name="chart_yidong_speed">移动速度：</string>
    <string name="chart_speed2">(公里/小时)\n</string>
    <string name="chart_radius1">7级风圈半径：</string>
    <string name="chart_kilometer">(公里)\n</string>
    <string name="chart_radius2">10级风圈半径：</string>
    <string name="chart_di">第</string>
    <string name="chart_haotaifeng">号台风</string>
    <string name="chart_propt">提示</string>
    <string name="current_position">当前位置：</string>
    <string name="actual_weather">您看到的天气是：</string>
    <string name="current_phe">当前天气是：</string>
    <string name="title_pressure">气压：</string>
    <string name="upload_phenomenon">提交成功！信息已送达中央气象台，感谢您的分享！</string>
    <string name="data_from_phone">（数据来源于手机传感器，仅供参考）</string>
    <string name="is_uploading">正在上传...</string>
    <string name="upload_failed">上传失败</string>
    <string name="upload_current_weather">上传现在的天空</string>
    <string name="unit_percent">%</string>
    <string name="unit_mm">mm</string>
    <string name="unit_hPa">hPa</string>
    <string name="unit_degree">℃</string>
    <string name="unit_speed">m/s</string>
    <string name="unit_m">m</string>
    <string name="unit_km">km</string>
    <string name="unit_hour">小时</string>
    <string name="unit_minute">分钟</string>
    <string name="weather0">晴</string>
    <string name="weather1">多云</string>
    <string name="weather2">阴</string>
    <string name="weather3">阵雨</string>
    <string name="weather4">雷阵雨</string>
    <string name="weather5">雨夹冰雹</string>
    <string name="weather6">雨夹雪</string>
    <string name="weather7">小雨</string>
    <string name="weather8">中雨</string>
    <string name="weather9">大雨</string>
    <string name="weather10">暴雨</string>
    <string name="weather11">大暴雨</string>
    <string name="weather12">特大暴雨</string>
    <string name="weather13">阵雪</string>
    <string name="weather14">小雪</string>
    <string name="weather15">中雪</string>
    <string name="weather16">大雪</string>
    <string name="weather17">暴雪</string>
    <string name="weather18">雾</string>
    <string name="weather19">冻雨</string>
    <string name="weather20">沙尘暴</string>
    <string name="weather21">小雨-中雨</string>
    <string name="weather22">中雨-大雨</string>
    <string name="weather23">大雨-暴雨</string>
    <string name="weather24">暴雨-大暴雨</string>
    <string name="weather25">大暴雨-特大暴雨</string>
    <string name="weather26">小雪-中雪</string>
    <string name="weather27">中雪-大雪</string>
    <string name="weather28">大雪-暴雪</string>
    <string name="weather29">浮尘</string>
    <string name="weather30">扬沙</string>
    <string name="weather31">强沙尘暴</string>
    <string name="weather32">浓雾</string>
    <string name="weather33">雪</string>
    <string name="weather49">强浓雾</string>
    <string name="weather53">霾</string>
    <string name="weather54">中度霾</string>
    <string name="weather55">重度霾</string>
    <string name="weather56">严重霾</string>
    <string name="weather57">大雾</string>
    <string name="weather58">特强浓雾</string>
    <string name="wind_dir0"></string>
    <string name="wind_dir1">东北风</string>
    <string name="wind_dir2">东风</string>
    <string name="wind_dir3">东南风</string>
    <string name="wind_dir4">南风</string>
    <string name="wind_dir5">西南风</string>
    <string name="wind_dir6">西风</string>
    <string name="wind_dir7">西北风</string>
    <string name="wind_dir8">北风</string>
    <string name="wind_dir9">旋转风</string>
    <string name="wind_force0">微风</string>
    <string name="wind_force1">3-4级</string>
    <string name="wind_force2">4-5级</string>
    <string name="wind_force3">5-6级</string>
    <string name="wind_force4">6-7级</string>
    <string name="wind_force5">7-8级</string>
    <string name="wind_force6">8-9级</string>
    <string name="wind_force7">9-10级</string>
    <string name="wind_force8">10-11级</string>
    <string name="wind_force9">11-12级</string>
    <string name="aqi0">优</string>
    <string name="aqi1">良</string>
    <string name="aqi2">轻度污染</string>
    <string name="aqi3">中度污染</string>
    <string name="aqi4">重度污染</string>
    <string name="aqi5">严重污染</string>
    <string name="trend_temp">过去24小时温度实况：（℃）</string>
    <string name="trend_humidity">过去24小时相对湿度实况：（%）</string>
    <string name="trend_rain">过去24小时降水量实况（mm）</string>
    <string name="trend_wind">过去24小时风速实况（m/s）</string>
    <string name="trend_pressure">过去24小时气压实况（hPa）</string>
</resources>