<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/reTitle"
        layout="@layout/layout_title" />

    <EditText
        android:id="@+id/etSearch"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_margin="10dp"
        android:background="@drawable/corner_edittext2"
        android:hint="@string/input_city_name"
        android:paddingStart="40dp"
        android:paddingEnd="10dp"
        android:textColor="@color/text_color2"
        android:textColorHint="@color/text_color1"
        android:textSize="@dimen/level_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reTitle" />

    <ImageView
        android:id="@+id/ivSearch"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="10dp"
        android:src="@drawable/iv_search"
        app:layout_constraintBottom_toBottomOf="@+id/etSearch"
        app:layout_constraintStart_toStartOf="@+id/etSearch"
        app:layout_constraintTop_toTopOf="@+id/etSearch" />

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:cacheColorHint="@color/transparent"
        android:divider="#30ffffff"
        android:dividerHeight="0.5dp"
        android:listSelector="@color/transparent"
        android:overScrollMode="never"
        android:scrollbars="none"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etSearch" />

    <TextView
        android:id="@+id/tvProvince"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/corner_left_blue"
        android:gravity="center"
        android:text="@string/hot_province"
        android:textColor="@color/white"
        android:textSize="@dimen/level_4"
        app:layout_constraintEnd_toStartOf="@+id/tvNational"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etSearch" />

    <TextView
        android:id="@+id/tvNational"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/corner_right_white"
        android:gravity="center"
        android:text="@string/hot_national"
        android:textColor="@color/title_bg"
        android:textSize="@dimen/level_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@+id/tvProvince"
        app:layout_constraintTop_toBottomOf="@+id/etSearch" />

    <com.hlj.stickygridheaders.StickyGridHeadersGridView
        android:id="@+id/pGridView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:cacheColorHint="@color/transparent"
        android:fadingEdge="none"
        android:horizontalSpacing="3dp"
        android:listSelector="@color/transparent"
        android:numColumns="4"
        android:overScrollMode="never"
        android:scrollbars="none"
        android:stretchMode="columnWidth"
        android:verticalSpacing="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvProvince" />

    <GridView
        android:id="@+id/nGridView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:cacheColorHint="@color/transparent"
        android:columnWidth="100dp"
        android:fadingEdge="none"
        android:gravity="center"
        android:horizontalSpacing="3dp"
        android:listSelector="@color/transparent"
        android:numColumns="4"
        android:overScrollMode="never"
        android:scrollbars="none"
        android:stretchMode="columnWidth"
        android:verticalSpacing="10dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvProvince" />

</android.support.constraint.ConstraintLayout>