<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
              android:id="@+id/llContent"
    android:background="@drawable/bg_main"
    android:orientation="vertical" >

    <include
        android:id="@+id/reTitle"
        layout="@layout/layout_title" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="never"
        android:scrollbars="none" >

        <LinearLayout
            android:id="@+id/llMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="5dp"
            android:visibility="gone" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#40ffffff"
                android:gravity="center_vertical"
                android:paddingBottom="3dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="3dp" >

                <ImageView
                    android:id="@+id/ivTemp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:src="@drawable/iv_label" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="5dp"
                    android:layout_toRightOf="@+id/ivTemp"
                    android:text="@string/trend_temp"
                    android:textColor="@color/white"
                    android:textSize="@dimen/level_4" />
            </RelativeLayout>

            <TextView
                android:id="@+id/tvException1"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:gravity="center"
                android:text="@string/data_isexception"
                android:textColor="@color/white"
                android:textSize="@dimen/level_3"
                android:visibility="gone" />

            <HorizontalScrollView
                android:id="@+id/hScroll1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:overScrollMode="never"
                android:scrollbars="none" >

                <LinearLayout
                    android:id="@+id/llContainer1"
                    android:layout_width="wrap_content"
                    android:layout_height="160dp"
                    android:orientation="horizontal" >
                </LinearLayout>
            </HorizontalScrollView>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="#40ffffff"
                android:gravity="center_vertical"
                android:paddingBottom="3dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="3dp" >

                <ImageView
                    android:id="@+id/ivHumidity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:src="@drawable/iv_label" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="5dp"
                    android:layout_toRightOf="@+id/ivHumidity"
                    android:text="@string/trend_humidity"
                    android:textColor="@color/white"
                    android:textSize="@dimen/level_4" />
            </RelativeLayout>

            <TextView
                android:id="@+id/tvException2"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:gravity="center"
                android:text="@string/data_isexception"
                android:textColor="@color/white"
                android:textSize="@dimen/level_3"
                android:visibility="gone" />

            <HorizontalScrollView
                android:id="@+id/hScroll2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:overScrollMode="never"
                android:scrollbars="none" >

                <LinearLayout
                    android:id="@+id/llContainer2"
                    android:layout_width="wrap_content"
                    android:layout_height="160dp"
                    android:orientation="horizontal" >
                </LinearLayout>
            </HorizontalScrollView>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="#40ffffff"
                android:gravity="center_vertical"
                android:paddingBottom="3dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="3dp" >

                <ImageView
                    android:id="@+id/ivRain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:src="@drawable/iv_label" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="5dp"
                    android:layout_toRightOf="@+id/ivRain"
                    android:text="@string/trend_rain"
                    android:textColor="@color/white"
                    android:textSize="@dimen/level_4" />
            </RelativeLayout>

            <TextView
                android:id="@+id/tvException3"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:gravity="center"
                android:text="@string/data_isexception"
                android:textColor="@color/white"
                android:textSize="@dimen/level_3"
                android:visibility="gone" />

            <HorizontalScrollView
                android:id="@+id/hScroll3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:overScrollMode="never"
                android:scrollbars="none" >

                <LinearLayout
                    android:id="@+id/llContainer3"
                    android:layout_width="wrap_content"
                    android:layout_height="160dp"
                    android:orientation="horizontal" >
                </LinearLayout>
            </HorizontalScrollView>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="#40ffffff"
                android:gravity="center_vertical"
                android:paddingBottom="3dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="3dp" >

                <ImageView
                    android:id="@+id/ivWind"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:src="@drawable/iv_label" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="5dp"
                    android:layout_toRightOf="@+id/ivWind"
                    android:text="@string/trend_wind"
                    android:textColor="@color/white"
                    android:textSize="@dimen/level_4" />
            </RelativeLayout>

            <TextView
                android:id="@+id/tvException4"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:gravity="center"
                android:text="@string/data_isexception"
                android:textColor="@color/white"
                android:textSize="@dimen/level_3"
                android:visibility="gone" />

            <HorizontalScrollView
                android:id="@+id/hScroll4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:overScrollMode="never"
                android:scrollbars="none" >

                <LinearLayout
                    android:id="@+id/llContainer4"
                    android:layout_width="wrap_content"
                    android:layout_height="160dp"
                    android:orientation="horizontal" >
                </LinearLayout>
            </HorizontalScrollView>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="#40ffffff"
                android:gravity="center_vertical"
                android:paddingBottom="3dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="3dp" >

                <ImageView
                    android:id="@+id/ivPressure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:src="@drawable/iv_label" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="5dp"
                    android:layout_toRightOf="@+id/ivPressure"
                    android:text="@string/trend_pressure"
                    android:textColor="@color/white"
                    android:textSize="@dimen/level_4" />
            </RelativeLayout>

            <TextView
                android:id="@+id/tvException5"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:gravity="center"
                android:text="@string/data_isexception"
                android:textColor="@color/white"
                android:textSize="@dimen/level_3"
                android:visibility="gone" />

            <HorizontalScrollView
                android:id="@+id/hScroll5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:overScrollMode="never"
                android:scrollbars="none" >

                <LinearLayout
                    android:id="@+id/llContainer5"
                    android:layout_width="wrap_content"
                    android:layout_height="160dp"
                    android:orientation="horizontal" >
                </LinearLayout>
            </HorizontalScrollView>
        </LinearLayout>
    </ScrollView>

</LinearLayout>